app-test/testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/check/cmp2.check
Error in "testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/src/cmp.cal" on line 7:
            OUT <-- T(1, false) = 1; // error
                    ^^^^^^^^^^^^^^^
= is not supported with T and uint(size=1).